# liboai

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  ROADMAP.md
documentation/: CMakeLists.txt  README.md
documentation/maintenance/: README.md
documentation/responses/: README.md  TECHNICAL_PLAN.md
documentation/responses/examples/: CMakeLists.txt  create_response.cpp  create_response_typed.cpp
liboai/: CMakeLists.txt
liboai/components/: chat.cpp  responses.cpp
liboai/core/: netimpl.cpp
liboai/include/: liboai.h
liboai/include/components/: chat.h  responses.h
liboai/include/core/: authorization.h  model_capabilities.h
